--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -1,16 +1,23 @@
-<meta name="viewport"
-      content="width=width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0">
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport"
+          content="width=width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0">
+    <meta http-equiv="content-type" content="txt/html; charset=utf-8"/>
+    <title>使用帮助</title>
+</head>
+<body>
 <h1>麻花助手</h1>
 
-<p>麻花助手，这是一款Xposed插件，旨在净化麻花影视手机版。当前是功能还不是很完善，支持<strong>麻花影视
-    手机版2.5.0</strong>版本，不支持 Exposed 和 Virtual Xposed 框架 ，EdXposed 未测试。</p>
+<p>麻花助手，这是一款Xposed插件，旨在净化麻花影视手机版。当前是功能还不是很完善，使用软件时注意<strong>助手所支持的麻花影视
+    版本</strong>，不支持 Exposed 框架，理论上不支持 Virtual Xposed 框架（未测试），EdXposed 框架未测试。</p>
 
-<h2>更新日志</h2>
+<h2>版本特点</h2>
 
 <ul>
-    <li><p>麻花助手 0.5.1 Beta 2019/02/22</p>
+    <li><p>麻花助手 0.6 2019/02/26</p>
         <ol>
+            <li>仅支持v1920-2.6.0版本；</li>
             <li>去除启动页广告；</li>
             <li>去除启动页5s倒计时；</li>
             <li>去除启动页历史广告显示；</li>
@@ -18,51 +25,6 @@
             <li>去除视频播放页面的广告；</li>
             <li>为助手添加图标；</li>
             <li>为助手添加设置菜单。</li>
-        </ol>
-    </li>
-    <li><p>麻花助手 0.1 Beta 2019/02/16</p>
-        <ol>
-            <li>去除启动页广告；</li>
-            <li>去除启动页5s倒计时；</li>
-            <li>去除启动页历史广告显示；</li>
-            <li>去除“推荐”、“电影”、“电视剧”页面中存在的广告；</li>
-            <li>去除视频播放页面的广告。</li>
-        </ol>
-    </li>
-</ul>
-
-<h2>工作进度</h2>
-
-<ul>
-    <li><p>2019/02/22</p>
-        <ol>
-            <li>更新图标；</li>
-            <li>添加设置菜单；</li>
-            <li>提升助手稳定性；</li>
-            <li>版本号叠至0.5.1 beta。</li>
-        </ol>
-    </li>
-    <li><p>2019/02/18</p>
-        <ol>
-            <li>自定义主界面按钮；</li>
-            <li>版本号叠至0.5 beta（未打包）。</li>
-        </ol>
-    </li>
-    <li><p>2019/02/17</p>
-        <ol>
-            <li>获取视频播放的真实地址；</li>
-            <li>不需要微信分享即可观看热门视频（不完美）;</li>
-            <li>版本号叠至0.4 beta（未打包）。</li>
-        </ol>
-    </li>
-    <li><p>2019/02/16</p>
-        <ol>
-            <li>去除启动页广告；</li>
-            <li>去除启动页5s倒计时；</li>
-            <li>去除启动页历史广告显示；</li>
-            <li>去除“推荐”、“电影”、“电视剧”页面中存在的广告；</li>
-            <li>去除视频播放页面的广告；</li>
-            <li>生成麻花助手 0.1 beta。</li>
         </ol>
     </li>
 </ul>
@@ -97,4 +59,6 @@
     <li>提交 issue</li>
     <li>发邮件至 haoyu3@163.com ，邮件主题注明“<strong>麻花助手</strong>”</li>
 </ul>
+</body>
 
+</html>
