支持解密新的URL加密方式

--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -15,17 +15,20 @@
 <h2>版本特点</h2>
 
 <ul>
-    <li><p>麻花助手 0.6 2019/02/26</p>
+    <li><p>麻花助手 0.6.2 2019/03/03</p>
         <ol>
-            <li>仅支持v1920-2.6.0版本；</li>
+            <li><strong>仅支持2.6.X版本；</strong></li>
+            <li><strong>获取视频播放地址</strong></li>
             <li>去除启动页广告；</li>
             <li>去除启动页5s倒计时；</li>
             <li>去除启动页历史广告显示；</li>
             <li>去除“推荐”、“电影”、“电视剧”页面中存在的广告；</li>
+            <li>去除主界面升级提示</li>
             <li>去除视频播放页面的广告；</li>
             <li>为助手添加图标；</li>
             <li>为助手添加设置菜单。</li>
         </ol>
+        <ol><strong>注：1080P视频地址无蓝光则特权无法获取</strong></ol>
     </li>
 </ul>
 
@@ -48,16 +51,20 @@
     <li>在“<strong>广告净化</strong>”中，可以自定义广告净化；</li>
     <li>在“<strong>底部栏设置</strong>”中，可以自定义首页底部五个选项卡的显示与隐藏；</li>
     <li>“<strong>去除5s启动</strong>”开启后，可自动进入首页;</li>
-    <li>
-        “<strong>假装微信分享</strong>”开启后，可以在点击微信分享到微信群或者分享到朋友圈后，直接返回，即成功分享。此功能主要用于<strong>观看热门影视</strong>。
-    </li>
+    <li>“<strong>去除更新</strong>”开启后，主界面升级提示将不会出现;</li>
+    <li>“<strong>获取视频地址</strong>”该功能尚处于测试阶段。开启后，将会在视频播放页面添加四个按钮，分别是360P,480P,720P,1080P，
+        点击按钮即可将连接复制到剪切板。如果没有蓝光特权，则将无法获取到1080P地址。获取到的视频地址是<strong>.m3u8格式</strong>,播放链接的时效性仅有24小时且直接复制到浏览器无法播放，
+        请使用视频播放器或者是m3u8视频解析链接播放。<strong>如果播放时一直是0KB/s，请复制该链接至站外播放。</strong></li>
+    <!--<li>-->
+        <!--“<strong>假装微信分享</strong>”开启后，可以在点击微信分享到微信群或者分享到朋友圈后，直接返回，即成功分享。此功能主要用于<strong>观看热门影视</strong>。-->
+    <!--</li>-->
 </ol>
 
 <h2>问题反馈</h2>
 
 <ul>
-    <li>提交 issue</li>
-    <li>发邮件至 haoyu3@163.com ，邮件主题注明“<strong>麻花助手</strong>”</li>
+    <li>通过 Github 提交 issue</li>
+    <li>发邮件至 haoyu3@163.com ，邮件主题注明“<strong>麻花助手+版本号</strong>”</li>
 </ul>
 </body>
 
