--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -46,14 +46,14 @@
 
 <ol>
     <li>在“<strong>全局设置</strong>”中，您可以选择是否启用插件，如果此选项为“否”，那么所有的功能都将会禁用；</li>
-    <li>在“<strong>详细设置</strong>”中目前包含“<strong>广告净化</strong>”，“<strong>底部栏设置</strong>”，“<strong>去除5s启动</strong>”，“<strong>假装微信分享</strong>”四个设置；
+    <li>在“<strong>详细设置</strong>”中目前包含“<strong>广告净化</strong>”，“<strong>底部栏设置</strong>”，“<strong>去除5s启动</strong>”三个设置；
     </li>
     <li>在“<strong>广告净化</strong>”中，可以自定义广告净化；</li>
     <li>在“<strong>底部栏设置</strong>”中，可以自定义首页底部五个选项卡的显示与隐藏；</li>
     <li>“<strong>去除5s启动</strong>”开启后，可自动进入首页;</li>
     <li>“<strong>去除更新</strong>”开启后，主界面升级提示将不会出现;</li>
     <li>“<strong>获取视频地址</strong>”该功能尚处于测试阶段。开启后，将会在视频播放页面添加四个按钮，分别是360P,480P,720P,1080P，
-        点击按钮即可将连接复制到剪切板。如果没有蓝光特权，则将无法获取到1080P地址。获取到的视频地址是<strong>.m3u8格式</strong>,播放链接的时效性仅有24小时且直接复制到浏览器无法播放，
+        点击按钮即可将连接复制到剪切板。如果没有蓝光特权，则将无法获取到1080P地址。获取到的视频地址是<strong>.m3u8格式</strong>,播放链接的时效性仅有几小时且直接复制到浏览器无法播放，
         请使用视频播放器或者是m3u8视频解析链接播放。<strong>如果播放时一直是0KB/s，请复制该链接至站外播放。</strong></li>
     <!--<li>-->
         <!--“<strong>假装微信分享</strong>”开启后，可以在点击微信分享到微信群或者分享到朋友圈后，直接返回，即成功分享。此功能主要用于<strong>观看热门影视</strong>。-->
