--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -10,20 +10,21 @@
 <h1>麻花助手</h1>
 
 <p>麻花助手，这是一款Xposed插件，旨在净化麻花影视手机版。当前是功能还不是很完善，使用软件时注意<strong>助手所支持的麻花影视
-    版本</strong>，不支持 Exposed 框架，理论上不支持 Virtual Xposed 框架（未测试），EdXposed 框架未测试。</p>
+    版本</strong>，<strong>支持 Edxposed 框架</strong>。不支持 Exposed 框架，不支持 Virtual Xposed 框架</p>
 
 <h2>版本特点</h2>
 
 <ul>
-    <li><p>麻花助手 0.6.2 2019/03/03</p>
+    <li><p>麻花助手 0.6.5 2019/03/05</p>
         <ol>
-            <li><strong>仅支持2.6.X版本；</strong></li>
+            <li><strong>仅支持官网的2.6.1版本；</strong></li>
             <li><strong>获取视频播放地址</strong></li>
             <li>去除启动页广告；</li>
             <li>去除启动页5s倒计时；</li>
             <li>去除启动页历史广告显示；</li>
             <li>去除“推荐”、“电影”、“电视剧”页面中存在的广告；</li>
-            <li>去除主界面升级提示</li>
+            <li>自定义主界面；</li>
+            <li>去除主界面升级提示；</li>
             <li>去除视频播放页面的广告；</li>
             <li>为助手添加图标；</li>
             <li>为助手添加设置菜单。</li>
@@ -59,6 +60,12 @@
         <!--“<strong>假装微信分享</strong>”开启后，可以在点击微信分享到微信群或者分享到朋友圈后，直接返回，即成功分享。此功能主要用于<strong>观看热门影视</strong>。-->
     <!--</li>-->
 </ol>
+
+<h2>致谢</h2>
+
+<ul>
+    <li><strong>感谢 “晓星” 帮忙测试Edxposed框架</strong></li>
+</ul>
 
 <h2>问题反馈</h2>
 
