--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -9,25 +9,24 @@
 <body>
 <h1>麻花助手</h1>
 
-<p>麻花助手，这是一款Xposed插件，旨在净化麻花影视手机版。当前是功能还不是很完善，使用软件时注意<strong>助手所支持的麻花影视
-    版本</strong>，<strong>支持 Edxposed 框架</strong>。不支持 Exposed 框架，不支持 Virtual Xposed 框架</p>
+<p>麻花助手，这是一款Xposed插件，旨在净化麻花影视手机版。当前是助手功能还不是很完善，可能部分设备有些问题，使用软件时注意<strong>助手所支持的麻花影视
+    版本</strong>，<strong>支持 Edxposed 框架，支持太极（Tai-Chi）框架。</strong></p>
 
 <h2>版本特点</h2>
 
 <ul>
-    <li><p>麻花助手 0.6.5 2019/03/05</p>
+    <li><p>麻花助手 0.6.6 2019/03/09</p>
         <ol>
-            <li><strong>仅支持官网的2.6.1版本；</strong></li>
-            <li><strong>获取视频播放地址</strong></li>
-            <li>去除启动页广告；</li>
-            <li>去除启动页5s倒计时；</li>
-            <li>去除启动页历史广告显示；</li>
-            <li>去除“推荐”、“电影”、“电视剧”页面中存在的广告；</li>
-            <li>自定义主界面；</li>
-            <li>去除主界面升级提示；</li>
-            <li>去除视频播放页面的广告；</li>
-            <li>为助手添加图标；</li>
-            <li>为助手添加设置菜单。</li>
+            <li><strong>仅支持2.6.1版本；</strong></li>
+            <li><strong>获取视频播放地址（测试）</strong></li>
+            <li>去除启动页广告</li>
+            <li>去除启动页5s倒计时</li>
+            <li>去除启动页历史广告显示</li>
+            <li>去除“推荐”、“电影”、“电视剧”页面中存在的广告</li>
+            <li>自定义主界面</li>
+            <li>去除主界面升级提示</li>
+            <li>去除视频播放页面的广告</li>
+            <li>去除主页底部的滚动广告（测试）</li>
         </ol>
         <ol><strong>注：1080P视频地址无蓝光则特权无法获取</strong></ol>
     </li>
@@ -61,18 +60,26 @@
     <!--</li>-->
 </ol>
 
-<h2>致谢</h2>
-
-<ul>
-    <li><strong>感谢 “晓星” 帮忙测试Edxposed框架</strong></li>
-</ul>
-
 <h2>问题反馈</h2>
 
 <ul>
     <li>通过 Github 提交 issue</li>
     <li>发邮件至 haoyu3@163.com ，邮件主题注明“<strong>麻花助手+版本号</strong>”</li>
 </ul>
+
+<h2>捐赠名单</h2>
+<ul>
+    <li><strong>*炳亮</strong></li>
+    <li><strong>*佳旺</strong></li>
+</ul>
+
+<h2>致谢</h2>
+
+<ul>
+    <li><strong>晓星</strong></li>
+    <li><strong>AceMONKEY519</strong></li>
+</ul>
+
 </body>
 
 </html>
